[package]
name = "loro"
version = "0.16.12"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/loro/"
description = "Loro is a high-performance CRDTs framework. Make your app collaborative efforlessly."
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro/"
authors = ["Zixuan Chen", "Liang Zhao"]
categories = []
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro-internal = { path = "../loro-internal", version = "0.16.2" }
loro-common = { path = "../loro-common", version = "0.16.2", features = ["serde_json"] }
loro-kv-store = { path = "../kv-store", version = "0.16.2" }
delta = { path = "../delta", package = "loro-delta", version = "0.16.2" }
generic-btree = { version = "^0.10.5" }
enum-as-inner = "0.6.0"
either = "1.9.0"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0.87"
anyhow = "1.0.83"
ctor = "0.2"
dev-utils = { path = "../dev-utils" }
rand = "0.8.5"
pretty_assertions = "1.4.0"

[features]
counter = ["loro-internal/counter"]
jsonpath = ["loro-internal/jsonpath"]
