[package]
name = "rle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.8.0"
bumpalo = { version = "3.11.1", features = ["collections", "boxed"] }
num = "0.4.0"
enum-as-inner = "0.5.1"
ouroboros = "0.15.4"
arref = "0.1.0"
crdt-list = { version = "0.4.0" }
fxhash = "0.2.1"
heapless = "0.7.16"
debug-log = "0.1.4"
append-only-bytes = { version = "0.1.11", features = ["u32_range"] }

[dev-dependencies]
color-backtrace = { version = "0.5" }
ctor = "0.1.23"
proptest = "1.0.0"
smartstring = "1.0.1"
rand = "0.8.5"
static_assertions = "1.1.0"

[features]
test_utils = []
wasm = []
