[package]
name = "compact-bytes-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version="1.3.0", features=["derive"] }
libfuzzer-sys = "0.4"

[dependencies.compact-bytes]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "match"
path = "fuzz_targets/match.rs"
test = false
doc = false
