[package]
name = "loro-delta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
libfuzzer-sys = "0.4"
dev-utils = { path = "../../dev-utils" }
tracing = "0.1.40"
ctor = "0.2.8"

[dependencies.loro-delta]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "ot"
path = "fuzz_targets/ot.rs"
test = false
doc = false
