[package]
name = "benches-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.examples]
path = ".."

[dependencies.bench-utils]
path = "../../bench-utils"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "draw"
path = "fuzz_targets/draw.rs"
test = false
doc = false
