[package]
name = "fuzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fuzz]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1


[[bin]]
name = "all"
path = "fuzz_targets/all.rs"
test = false
doc = false

[[bin]]
name = "mov"
path = "fuzz_targets/mov.rs"
test = false
doc = false

[[bin]]
name = "tree"
path = "fuzz_targets/tree.rs"
test = false
doc = false
